# bpred

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  charter.md  logo-prompt.md
examples/: README.md  sample.trace
src/bpred/: __init__.py  bimodal.py  cli.py  counter.py  gshare.py  local_history.py  perceptron.py  tournament.py  trace.py
tests/: test_bimodal.py  test_counter.py  test_gshare.py  test_local_history.py  test_perceptron.py  test_property.py  test_tournament.py  test_trace.py
